object.style.zIndex

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     radius: 1,
                     fillColor: "orange",
                     color: "orange",
-                    zindex:100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7
@@ -171,7 +171,7 @@
                     radius: 1,
                     fillColor: "#fffdba",
                     color: "#fffdba",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -183,7 +183,7 @@
                     radius: 0.5,
                     fillColor: "#4fff19",
                     color: "#4fff19",
-                    zindex: 200,
+                    object.style.zIndex = "200",
                     weight: 1,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -195,7 +195,7 @@
                     radius: 0.5,
                     fillColor: "#3df5ff",
                     color: "#3df5ff",
-                    zindex: 200,
+                    object.style.zIndex = "200",
                     weight: 1,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -207,7 +207,7 @@
                     radius: 1,
                     fillColor: "#663300",
                     color: "#663300",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -220,7 +220,7 @@
                     radius: 1,
                     fillColor: "red",
                     color: "red",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -232,7 +232,7 @@
                     radius: 1,
                     fillColor: "green",
                     color: "green",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -244,7 +244,7 @@
                     radius: 1,
                     fillColor: "blue",
                     color: "blue",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -256,7 +256,7 @@
                     radius: 1,
                     fillColor: '#fbff01',
                     color: '#fbff01',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -268,7 +268,7 @@
                     radius: 1,
                     fillColor: '#8A2BE2',
                     color: '#8A2BE2',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -280,7 +280,7 @@
                     radius: 2,
                     fillColor: "orange",
                     color: "orange",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7
@@ -294,7 +294,7 @@
                     radius: 2,
                     fillColor: "#fffdba",
                     color: "black",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -306,7 +306,7 @@
                     radius: 1,
                     fillColor: "#4fff19",
                     color: "#cc56ff",
-                    zindex: 200,
+                    object.style.zIndex = "200",
                     weight: 1,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -318,7 +318,7 @@
                     radius: 1,
                     fillColor: "#3df5ff",
                     color: "#ff56eb",
-                    zindex: 200,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -330,7 +330,7 @@
                     radius: 2,
                     fillColor: "#663300",
                     color: "black",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -342,7 +342,7 @@
                     radius: 2,
                     fillColor: "red",
                     color: "red",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -354,7 +354,7 @@
                     radius: 2,
                     fillColor: "white",
                     color: "red",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -366,7 +366,7 @@
                     radius: 2,
                     fillColor: "green",
                     color: "green",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -378,7 +378,7 @@
                     radius: 2,
                     fillColor: "white",
                     color: "green",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -390,7 +390,7 @@
                     radius: 2,
                     fillColor: "blue",
                     color: "blue",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -402,7 +402,7 @@
                     radius: 2,
                     fillColor: "white",
                     color: '#8A2BE2',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -414,7 +414,7 @@
                     radius: 2,
                     fillColor: '#fbff01',
                     color: '#fbff01',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -426,7 +426,7 @@
                     radius: 2,
                     fillColor: '#8A2BE2',
                     color: '#8A2BE2',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -438,7 +438,7 @@
                     radius: 2,
                     fillColor: 'white',
                     color: '#fbff01',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7   
@@ -451,7 +451,7 @@
                     radius: 3.5,
                     fillColor: "green",
                     color: "#004c00",
-                    zindex: 100,
+                   object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -464,7 +464,7 @@
                     radius: 3.5,
                     fillColor: "#fffdba",
                     color: "black",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -476,7 +476,7 @@
                     radius: 1.7,
                     fillColor: "#4fff19",
                     color: "#cc56ff",
-                    zindex: 200,
+                    object.style.zIndex = "200",
                     weight: 1.4,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -488,7 +488,7 @@
                     radius: 1.7,
                     fillColor: "#3df5ff",
                     color: "#ff56eb",
-                    zindex: 200,
+                    object.style.zIndex = "200",
                     weight: 1.4,
                     opacity: 0.9,
                     fillOpacity: 0.9   
@@ -500,7 +500,7 @@
                     radius: 3.5,
                     fillColor: "#663300",
                     color: "black",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -513,7 +513,7 @@
                     radius: 3.5,
                     fillColor: "white",
                     color: "#004c00",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -525,7 +525,7 @@
                     radius: 3.5,
                     fillColor: "red",
                     color: '#7f0000',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -537,7 +537,7 @@
                     radius: 3.5,
                     fillColor: "white",
                     color: '#7f0000',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -549,7 +549,7 @@
                     radius: 3.5,
                     fillColor: "blue",
                     color: "#00007f",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -561,7 +561,7 @@
                     radius: 3.5,
                     fillColor: "white",
                     color: "#6e22b4",
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -573,7 +573,7 @@
                     radius: 3.5,
                     fillColor: "orange",
                     color: "#7f5200",
-                    zindex: 100,
+                   object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -586,7 +586,7 @@
                     radius: 3.5,
                     fillColor: '#fbff01',
                     color: '#7f6b00',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -598,7 +598,7 @@
                     radius: 3.5,
                     fillColor: 'white',
                     color: '#7f6b00',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -610,7 +610,7 @@
                     radius: 3.5,
                     fillColor: '#8A2BE2',
                     color: '#6e22b4',
-                    zindex: 100,
+                    object.style.zIndex = "100",
                     weight: 1.4,
                     opacity: 0.6,
                     fillOpacity: 0.6   
@@ -623,97 +623,97 @@
 
             var priorOtg_7_style = L.icon({
                 iconUrl: 'data/priorOtg_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
              var subvention_7_style = L.icon({
                 iconUrl: 'data/subvention_7.svg',
-                zindex: 200,
+                object.style.zIndex = "200",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
               var dfrr_7_style = L.icon({
                 iconUrl: 'data/dfrr_7.svg',
-                zindex: 200,
+                object.style.zIndex = "200",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
               var ui_7_style = L.icon({
                 iconUrl: 'data/ui_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var giz_7_style = L.icon({
                 iconUrl: 'data/egap_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var giz_7_pr_style = L.icon({
                 iconUrl: 'data/egap_pr_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var ulead_7_style = L.icon({
                 iconUrl: 'data/rest_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var ulead_7_pr_style = L.icon({
                 iconUrl: 'data/rest_7_pr.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var undp_7_style = L.icon({
                 iconUrl: 'data/ulead_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var euproject_7_style = L.icon({
                 iconUrl: 'data/euproject_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var euproject_7_pr_style = L.icon({
                 iconUrl: 'data/euproject_pr_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var egap_7_style = L.icon({
                 iconUrl: 'data/undp_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
             var egap_7_pr_style = L.icon({
                 iconUrl: 'data/undp_pr_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });
 
             var rest_7_style = L.icon({
                 iconUrl: 'data/giz_7.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [16, 16],
                 iconAnchor: [8,8]
             });                                    
@@ -724,63 +724,63 @@
 
             var priorOtg_8_style = L.icon({
                 iconUrl: 'data/priorOtg_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var subvention_8_style = L.icon({
                 iconUrl: 'data/subvention_8.svg',
-                zindex: 200,
+                object.style.zIndex = "200",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var dfrr_8_style = L.icon({
                 iconUrl: 'data/dfrr_8.svg',
-                zindex: 200,
+                object.style.zIndex = "200",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var ui_8_style = L.icon({
                 iconUrl: 'data/ui_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var giz_8_style = L.icon({
                 iconUrl: 'data/egap_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var giz_8_pr_style = L.icon({
                 iconUrl: 'data/egap_pr_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var ulead_8_style = L.icon({
                 iconUrl: 'data/rest_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var ulead_8_pr_style = L.icon({
                 iconUrl: 'data/rest_8_pr.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var undp_8_style = L.icon({
                 iconUrl: 'data/ulead_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
@@ -793,35 +793,35 @@
 
             var euproject_8_style = L.icon({
                 iconUrl: 'data/euproject_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var euproject_8_pr_style = L.icon({
                 iconUrl: 'data/euproject_pr_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var egap_8_style = L.icon({
                 iconUrl: 'data/undp_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var egap_8_pr_style = L.icon({
                 iconUrl: 'data/undp_pr_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });
 
             var rest_8_style = L.icon({
                 iconUrl: 'data/giz_8.svg',
-                zindex: 100,
+                object.style.zIndex = "100",
                 iconSize: [24, 24],
                 iconAnchor: [12,12]
             });          
