--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     radius: 1,
                     fillColor: "orange",
                     color: "orange",
-                    object.style.zIndex = "100",
+                    object.style.zIndex: "100",
                     weight: 1,
                     opacity: 0.6,
                     fillOpacity: 0.7
